--- a/OneDesk.csproj
+++ b/OneDesk.csproj
@@ -27,6 +27,7 @@
     <PackageReference Include="Microsoft.Graph" Version="5.100.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.4" />
     <PackageReference Include="Nito.AsyncEx" Version="5.1.2" />
+    <PackageReference Include="ObservableCollections" Version="3.3.4" />
     <PackageReference Include="SharpVectors.Wpf" Version="1.8.5" />
     <PackageReference Include="WPF-UI" Version="4.1.0" />
     <PackageReference Include="WPF-UI.DependencyInjection" Version="4.1.0" />
